WMIT-20 Implement use case: ChooseCalendar  - complete functionality implementation  - changed start Activity to Choose Calendar for demonstration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">WakeMeInTime</string>
+    <string name="myCalendars">Meine Kalendar</string>
+    <string name="calendarName"></string>
 </resources>
