--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,14 +15,14 @@
 
     <string name="pref_title_time_between_wakeup_and_departure">Time between wakeup and departure</string>
     <string-array name="times_5_to_90_Mins_list_titles">
-        <item>5 Minutes</item>
-        <item>10 Minutes</item>
-        <item>15 Minutes</item>
-        <item>20 Minutes</item>
-        <item>30 Minutes</item>
-        <item>45 Minutes</item>
-        <item>1 Hour</item>
-        <item>1,5 Hours</item>
+        <item>5 minutes</item>
+        <item>10 minutes</item>
+        <item>15 minutes</item>
+        <item>20 minutes</item>
+        <item>30 minutes</item>
+        <item>45 minutes</item>
+        <item>1 hour</item>
+        <item>1,5 hours</item>
     </string-array>
     <string-array name="times_5_to_90_Mins_list_values">
         <item>5</item>
@@ -35,50 +35,34 @@
         <item>90</item>
     </string-array>
 
-    <!-- Example settings for Data & Sync -->
-    <string name="pref_header_data_sync">Data &amp; sync</string>
+    <!-- Example settings for Transportation -->
+    <string name="pref_header_transportation">Transportation</string>
 
-    <string name="pref_title_sync_frequency">Sync frequency</string>
-    <string-array name="pref_sync_frequency_titles">
-        <item>15 minutes</item>
-        <item>30 minutes</item>
-        <item>1 hour</item>
-        <item>3 hours</item>
-        <item>6 hours</item>
-        <item>Never</item>
+    <string name="pref_title_travel_method">choose travel method</string>
+    <string-array name="pref_travel_method_titles">
+        <item>Fastest method</item>
+        <item>Car</item>
+        <item>Train</item>
     </string-array>
-    <string-array name="pref_sync_frequency_values">
-        <item>15</item>
-        <item>30</item>
-        <item>60</item>
-        <item>180</item>
-        <item>360</item>
-        <item>-1</item>
-    </string-array>
-
-    <string-array name="list_preference_entries">
-        <item>Entry 1</item>
-        <item>Entry 2</item>
-        <item>Entry 3</item>
-    </string-array>
-
-    <string-array name="list_preference_entry_values">
+    <string-array name="pref_travel_method_values">
         <item>1</item>
         <item>2</item>
         <item>3</item>
+
     </string-array>
 
-    <string-array name="multi_select_list_preference_default_value" />
+    <!-- Example settings for Alarms -->
+    <string name="pref_header_alarms">Alarms</string>
 
-    <string name="pref_title_system_sync_settings">System sync settings</string>
-
-    <!-- Example settings for Notifications -->
-    <string name="pref_header_notifications">Notifications</string>
-
-    <string name="pref_title_new_message_notifications">New message notifications</string>
+    <string name="pref_title_new_message_notifications">Use custom alarm settings</string>
 
     <string name="pref_title_ringtone">Ringtone</string>
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+    <string name="alarm_repeat_amount_value">5</string>
+    <string name="title_Alarm_repeat_amount">Alarm repeat amount</string>
+    <string name="title_Alarm_repeat_time">Alarm repeat time</string>
+    <string name="alarm_repeat_time_value">5</string>
+
 </resources>
