--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="myCalendars">Meine Kalendar</string>
     <string name="calendarName"></string>
     <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_main">Main(WMIT)</string>
 
     <!-- Strings related to Settings -->
 
@@ -64,5 +65,8 @@
     <string name="title_Alarm_repeat_amount">Alarm repeat amount</string>
     <string name="title_Alarm_repeat_time">Alarm repeat time</string>
     <string name="alarm_repeat_time_value">5</string>
+    <string name="settings_button">Settings</string>
+    <string name="login_button">Login</string>
+    <string name="choose_calendar_button">Choose calendar</string>
 
 </resources>
